# ALCN

./: README.md  index.html
back/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.Docker.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_api.py
back/alembic/: env.py
back/alembic/versions/: 1409c7ccbf72_create_username_column_for_users.py  188161567497_make_entry_type_nullable_and_add_.py  4281af1665d0_initial_schema_from_sql.py  46e2f7702d2b_add_other_language_codes_to_entries.py  473d33eae1aa_add_search_vector_to_translations.py  7aa0b30f5dc6_add_translation_voting_system.py  81f1891a8234_add_trigram_extension.py  af352b600006_add_is_preferred_to_translations.py  b6e0f1f302b3_remove_language_code_from_translations.py
back/app/: main.py
back/app/api/endpoints/: auth.py  backup.py  comments.py  entries.py  translation_votes.py  translations.py  users.py
back/app/core/: config.py  database.py  security.py
back/app/crud/: entries.py  translation_votes.py  users.py
back/app/models/: models.py
back/app/schemas/: auth.py  comments.py  entries.py  schemas.py  translations.py  users.py
back/app/services/: email_service.py
back/scripts/: backup.sh  setup-cron.sh
css/: main.css  main.css.map
database/: data.json
front/: .env.vercel  .gitignore  README.md  package-lock.json  package.json
front/messages/: en.json  zh.json
js/: main.js
parsing/: ReadME.md  ReadME.md.txt  main.py
parsing/conversed_texts/: 01_ancientName_processed.txt  02_terminology_processed.txt  main.py  (+1 more)
scss/: main.scss
(+82 files in other folders)
